--- a/projects/cli/bak/main.css
+++ b/projects/cli/bak/main.css
@@ -10,10 +10,15 @@
 }
 
 .cavas-holder-inner {
-    padding: 16px;
     width: 100%;
     height: 100%;
     display: flex;
     position: absolute;
     background-color: #585858;
+}
+
+body{
+    margin:0;
+    overflow:hidden;
+    overscroll-behavior-y: contain;
 }
